--- a/app.json
+++ b/app.json
@@ -8,9 +8,9 @@
         "save restricted",
         "bot"
     ],
-    "repository": "https://github.com/vasusen-code/SaveRestrictedContentBot",
+    "repository": "https://github.com/Devansh20055/save-restricted-v-2",
     "website": "",
-    "success_url": "https://t.me/DroneBots",
+    "success_url": "https://t.me/team_silent_king",
     "env": {
         "API_HASH": {
             "description": "Your API HASH from my.telegram.org",
